--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -13,7 +13,130 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> All Program's Data</h2>
+            </li>
+        </ul>
+
+    </div>
+</div>
+
+<section id="formElement" class="utopia-widget utopia-form-box section">
+    <div class="utopia-widget-title">
+        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
+        <span class="muted">search elements</span>
+
+        <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
+        <span class="textPrimary" style="float:right;">Total Records: </span>
+    </div>
+
+    <div class="row-fluid">
+        <div class="utopia-widget-content">
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId1"> তথ্যের উৎস:</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Sources", new { @class = "span12 ddl" })
+
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="FromDate">সার্চের শুরুর তারিখ:</label>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId2">জেলা :</label>
+                        @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Districts", new { @class = "span12 ddl" })
+
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ToDate">সার্চের শেষ তারিখ:</label>
+
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId3"> উপজেলা :</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Upazillas", new { @class = "span12 ddl" })
+
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> সার্চ </a>
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            &nbsp;
+                            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+                            {
+                                @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "BepSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-primary pull-right" })
+                            }
+                        </div>
+                    </div>
+
+                </fieldset>
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
+                            <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
+
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </div>
+</section>
+
+@*<section id="counter-social-icon" class="utopia-widget utopia-form-box">
     <div class="utopia-widget-title">
         <img class="utopia-widget-icon" style="margin: 15px 0 0 15px;" src="~/Content/img/icons2/connect.png">
         <span>All Program's Data</span>
@@ -66,7 +189,7 @@
                     <a id="exp" href="#" class="btn pull-right">Export</a>
                     <a id="prn" href="#" class="btn pull-right">Print</a>
                 </div>
-            </div>
+            </div>*@
 
             <table id="gridTable" class="table table-striped table-bordered fixed_headers">
                 <thead>
@@ -115,12 +238,12 @@
                         {
                             <th></th>
                         }
-                    </tr>                    
+                    </tr>
                 </thead>
             </table>
-        </div>
+        @*</div>
     </div>
-</section>
+</section>*@
 @section scripts{
     <script type="text/javascript">
     $(document).ready(function () {
