--- a/App.Web/Views/BepSubmission/IndexCount.cshtml
+++ b/App.Web/Views/BepSubmission/IndexCount.cshtml
@@ -19,7 +19,7 @@
     <div class="span12">
         <ul class="breadcrumb">
             <li>
-                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> All Program's Data</h2>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> All Program's Item wise & Location wise Data</h2>
             </li>
         </ul>
 
@@ -135,6 +135,9 @@
     <table id="gridTable" class="table table-striped table-bordered fixed_headers">
         <thead>
             <tr>
+                <th rowspan="2">Program</th>
+                <th rowspan="2">Division</th>
+                <th rowspan="2">District</th>
                 <th rowspan="2">Material</th>
                 <th colspan="4">Preparation</th>
                 <th colspan="2">Distribution</th>
@@ -166,6 +169,9 @@
     <table id="gridTableR" class="table table-striped table-bordered fixed_headers">
         <thead>
             <tr>
+                <th rowspan="2">Program</th>
+                <th rowspan="2">Division</th>
+                <th rowspan="2">District</th>
                 <th rowspan="2">
                     Activity
                 </th>
@@ -298,7 +304,7 @@
 
             /*data grid initializer*/
         DataTableBinder($('#gridTable')   //table object
-                , '@Url.Content("~/BepSubmission/DataGridItem")'  //json data url
+                , '@Url.Content("~/BepSubmission/DataGridCount")'  //json data url
                 , [100, 200, 1000] //record size
                 , true //show all with row size
                 , addPost  //additional parameters at query string
@@ -308,7 +314,7 @@
 
         /*data grid initializer*/
         DataTableBinder($('#gridTableR')   //table object
-            , '@Url.Content("~/BepSubmission/DataGridItem")'  //json data url
+            , '@Url.Content("~/BepSubmission/DataGridCount")'  //json data url
             , [100, 200, 1000] //record size
             , true //show all with row size
             , addPost  //additional parameters at query string
