--- a/App.Web/Views/DetailSubmission/Index.cshtml
+++ b/App.Web/Views/DetailSubmission/Index.cshtml
@@ -13,113 +13,180 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" style="margin: 15px 0 0 15px;" src="~/Content/img/icons2/connect.png">
-        <span>সম্ভাব্য রোগীর তথ্য</span>
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> সম্ভাব্য রোগীর তথ্য</h2>
+            </li>
+        </ul>
+
     </div>
+</div>
+
+<section id="formElement" class="utopia-widget utopia-form-box section">
+    <div class="utopia-widget-title">
+        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
+        <span class="muted">search elements</span>
+
+        <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
+        <span class="textPrimary" style="float:right;">Total Records: </span>
+    </div>
+
     <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
+        <div class="utopia-widget-content">
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId1"> তথ্যের উৎস:</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Sources", new { @class = "span12 ddl" })
 
-            <div class="row-fluid pull-right">
-                <div class="row-fluid">
-                    <div class="pull-right">
-                        <a href="#">Total Records: <span id="iTotalRecords"></span></a>
-                        @if (UserRole.Check("DETAIL", SessionHelper.Role))
-                        {
-                            @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "DetailSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-success" })
-                        }
+                        </div>
                     </div>
-                </div>
-            </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="FromDate">সার্চের শুরুর তারিখ:</label>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
 
-            <div class="row-fluid">
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">তথ্যের উৎস: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Sources", new { @class = "ddl" })
-                </div>
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">জেলা: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "ddl" })
-                </div>
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">উপজেলা: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "ddl" })
-                </div>
-            </div>
-            <div class="row-fluid">
-                <div class="span4">
-                    <h3 class="pull-left muted font-head">অনুসন্ধানের শুরুর তারিখ: </h3>
-                    @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
-                </div>
-                <div class="span4">
-                    <h3 class="pull-left muted font-head">শেষ তারিখ </h3>
-                    @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+                        </div>
+                    </div>
 
-                </div>
-                <div class="span2">
-                    <a id="dateSearchButton" class="btn">সকল তথ্য<i class="icon icon-search"></i></a>
-                    <a id="dateSearchButton2" class="btn">শুধু সম্ভাব্য রোগী<i class="icon icon-search"></i></a>
-                    <input type="hidden" id="onlyPatient" value="false" />
-                </div>
-                <div class="span2">
-                    <a id="exp" href="#" class="btn pull-right">Export</a>
-                    <a id="prn" href="#" class="btn pull-right">Print</a>
-                </div>
-            </div>
+                </fieldset>
 
-            <table id="gridTable" class="table table-striped table-bordered fixed_headers">
-                <thead>
-                    <tr>
-                        <th>
-                            তথ্যের উৎস
-                        </th>
-                        <th>
-                            জেলা
-                        </th>
-                        <th>
-                            উপজেলা
-                        </th>
-                        <th>
-                            তারিখ
-                        </th>
-                        <th>
-                            নাম
-                        </th>
-                        <th>
-                            বয়স
-                        </th>
-                        <th>
-                            জ্বর ?
-                        </th>
-                        <th>
-                            শুকনো কাশি?
-                        </th>
-                        <th>
-                            শ্বাস কষ্ট?
-                        </th>
-                        <th>
-                            কন্টাক্ট ?
-                        </th>
-                        <th>
-                            লিঙ্গ
-                        </th>
-                        <th>
-                            মোবাইল
-                        </th>
-                        <th>
-                            নিবন্ধনকারী
-                        </th>
-                        @if (UserRole.Check("DETAIL", SessionHelper.Role))
-                        {
-                            <th></th>
-                        }
-                    </tr>
-                </thead>
-            </table>
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId2">জেলা :</label>
+                        @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "span12 ddl" })
+
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ToDate">সার্চের শেষ তারিখ:</label>
+
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId3"> উপজেলা :</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "span12 ddl" })
+
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> সার্চ </a>
+                            <a id="dateSearchButton2" class="btn btn-info"><i class="icon icon-search icon-white"></i> শুধু সম্ভাব্য রোগী</a>
+                            <input type="hidden" id="onlyPatient" value="false" />
+                        </div>
+                    </div>
+
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            &nbsp;
+                            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+                            {
+                                @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "DetailSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-primary pull-right" })
+                            }
+                        </div>
+                    </div>
+
+                </fieldset>
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
+                            <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
+
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
         </div>
     </div>
 </section>
+
+<table id="gridTable" class="table table-striped table-bordered fixed_headers">
+    <thead>
+        <tr>
+            <th>
+                তথ্যের উৎস
+            </th>
+            <th>
+                জেলা
+            </th>
+            <th>
+                উপজেলা
+            </th>
+            <th>
+                তারিখ
+            </th>
+            <th>
+                নাম
+            </th>
+            <th>
+                বয়স
+            </th>
+            <th>
+                জ্বর ?
+            </th>
+            <th>
+                শুকনো কাশি?
+            </th>
+            <th>
+                শ্বাস কষ্ট?
+            </th>
+            <th>
+                কন্টাক্ট ?
+            </th>
+            <th>
+                লিঙ্গ
+            </th>
+            <th>
+                মোবাইল
+            </th>
+            <th>
+                নিবন্ধনকারী
+            </th>
+            @if (UserRole.Check("DETAIL", SessionHelper.Role))
+            {
+                <th></th>
+            }
+        </tr>
+    </thead>
+</table>
+
 @section scripts{
     <script type="text/javascript">
     $(document).ready(function () {
