--- a/App.Web/Views/DistrictSubmission/IndexReleif.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexReleif.cshtml
@@ -13,124 +13,188 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" style="margin: 15px 0 0 15px;" src="~/Content/img/icons2/connect.png">
-        <span>জেলার প্রতিদিনের  তথ্য (BDC)</span>
+
+
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> বি.ডি.সি. - জেলার প্রতিদিনের তথ্য</h2>
+            </li>
+        </ul>
+
     </div>
+</div>
+
+<section id="formElement" class="utopia-widget utopia-form-box section">
+    <div class="utopia-widget-title">
+        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
+        <span class="muted">search elements</span>
+
+        <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
+        <span class="textPrimary" style="float:right;">Total Records: </span>
+    </div>
+
     <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
+        <div class="utopia-widget-content">
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId1"> বিভাগ:</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Divisions", new { @class = "span12 ddl" })
 
-            <div class="row-fluid pull-right">
-                <div class="row-fluid">
-                    <div class="pull-right">
-                        <a href="#">Total Records: <span id="iTotalRecords"></span></a>
-                        @if (UserRole.Check("DISTRICT", SessionHelper.Role))
-                        {
-                            @Ajax.ActionLink("তথ্য প্রদান ও পরিবর্তন", "Create", "DistrictSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-success" })
-                        }
+                        </div>
                     </div>
-                </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="FromDate">সার্চের শুরুর তারিখ:</label>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
             </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId2">জেলা :</label>
+                        @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "span12 ddl" })
 
-            <div class="row-fluid">
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">বিভাগ: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Division", new { @class = "ddl" })
-                </div>
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">জেলা: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "ddl" })
-                </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ToDate">সার্চের শেষ তারিখ:</label>
+
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
             </div>
-            <div class="row-fluid">
-                <div class="span4">
-                    <h3 class="pull-left muted font-head">অনুসন্ধানের শুরুর তারিখ: </h3>
-                    @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
-                </div>
-                <div class="span4">
-                    <h3 class="pull-left muted font-head">শেষ তারিখ </h3>
-                    @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId3">  &nbsp; </label>
+                        <div class="controls">
+                            &nbsp;
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> সার্চ </a>
+                        </div>
+                    </div>
 
-                </div>
-                <div class="span2">
-                    <input type="hidden" id="isSum" name="isSum" value="false" />
-                    <a id="dateSearchButton" class="btn">সার্চ <i class="icon icon-search"></i></a>
-                    @*<a id="dateSearchButtonSum" class="btn">মোট তথ্য <i class="icon icon-search"></i></a>*@
-                </div>
-                <div class="span2">
-                    <a id="exp" href="#" class="btn pull-right">Export</a>
-                    <a id="prn" href="#" class="btn pull-right">Print</a>
-                </div>
+                </fieldset>
+
             </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            &nbsp;
+                            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+                            {
+                                @Ajax.ActionLink("তথ্য প্রদান ও পরিবর্তন", "Create", "DistrictSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-primary pull-right" })
+                            }
+                        </div>
+                    </div>
 
-            <table id="gridTable" class="table table-striped table-bordered fixed_headers" style="width:100%;">
-                <thead>
-                    <tr>
-                        <th colspan="3">এরিয়া </th>
-                        <th colspan="4">Covid-19 দিনের তথ্য</th>
-                        <th colspan="4">Covid-19 আজ পর্যন্ত তথ্য</th>
-                        <th rowspan="2">এই তারিখে কোয়ারেন্টাইনে আছেন</th>
-                        <th rowspan="2">মানবিক সহায়তা প্রদান (পরিবার)</th>
-                        <th colspan="8">মোট বিতরণ (মেঃ টন)</th>
-                    </tr>
-                    <tr>
-                        <th>
-                            বিভাগ
-                        </th>
-                        <th>
-                            জেলা
-                        </th>
-                        <th>
-                            তারিখ
-                        </th>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
+                            <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
 
-                        <th>
-                            আজ নতুন কোয়ারেন্টাইন
-                        </th>
-                        <th>
-                            আজ নতুন রিলিজ
-                        </th>
-                        <th>
-                            আজ নতুন টেস্ট
-                        </th>
-                        <th>
-                            আজ নতুন মৃত্যু
-                        </th>
-
-                        <th>
-                            আজ পর্যন্ত কোয়ারেন্টাইন
-                        </th>
-                        <th>
-                            আজ পর্যন্ত রিলিজ
-                        </th>
-                        <th>
-                            আজ পর্যন্ত টেস্ট
-                        </th>
-                        <th>
-                            আজ পর্যন্ত মৃত্যু
-                        </th>
-                        @*<th> পরিবার </th>*@
-                        @*<th> ব্যক্তি </th>*@
-                        <th> চাল </th>
-                        <th> ডাল </th>
-                        <th> আলু </th>
-                        <th> টাকা</th>
-                        <th> অন্নান্য</th>
-                        @*<th>পেঁয়াজ</th>
-        <th>লবন </th>
-        <th>তেল </th>
-        <th>সাবান </th>*@
-                        @*@if (UserRole.Check("DISTRICT", SessionHelper.Role))
-        {
-            <th></th>
-        }*@
-                    </tr>
-                </thead>
-            </table>
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
         </div>
     </div>
 </section>
+
+<table id="gridTable" class="table table-striped table-bordered fixed_headers" style="width:100%;">
+    <thead>
+        <tr>
+            <th colspan="3">এরিয়া </th>
+            <th colspan="4">Covid-19 দিনের তথ্য</th>
+            <th colspan="4">Covid-19 আজ পর্যন্ত তথ্য</th>
+            <th rowspan="2">এই তারিখে কোয়ারেন্টাইনে আছেন</th>
+            <th colspan="4">মানবিক সহায়তা বিতরণ</th>
+            <th rowspan="2">অন্নান্য</th>
+        </tr>
+        <tr>
+            <th>
+                বিভাগ
+            </th>
+            <th>
+                জেলা
+            </th>
+            <th>
+                তারিখ
+            </th>
+
+            <th>
+                আজ নতুন কোয়ারেন্টাইন
+            </th>
+            <th>
+                আজ নতুন রিলিজ
+            </th>
+            <th>
+                আজ নতুন টেস্ট
+            </th>
+            <th>
+                আজ নতুন মৃত্যু
+            </th>
+
+            <th>
+                আজ পর্যন্ত কোয়ারেন্টাইন
+            </th>
+            <th>
+                আজ পর্যন্ত রিলিজ
+            </th>
+            <th>
+                আজ পর্যন্ত টেস্ট
+            </th>
+            <th>
+                আজ পর্যন্ত মৃত্যু
+            </th>
+            <th> চাল (মেঃটন) </th>
+            <th> চাল বিতরণ পরিবার </th>
+            <th> টাকা </th>
+            <th> টাকা বিতরণ পরিবার </th>
+
+            @*@if (UserRole.Check("DISTRICT", SessionHelper.Role))
+                {
+                    <th></th>
+                }*@
+        </tr>
+    </thead>
+</table>
+
 @section scripts{
     <script type="text/javascript">
     $(document).ready(function () {
