--- a/App.Web/Views/DistrictSubmission/IndexSum.cshtml
+++ b/App.Web/Views/DistrictSubmission/IndexSum.cshtml
@@ -13,113 +13,130 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" style="margin: 15px 0 0 15px;" src="~/Content/img/icons2/connect.png">
-        <span>জেলার Summary (BDC)</span>
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> বি.ডি.সি. - জেলার বর্তমান অবস্থা</h2>
+            </li>
+        </ul>
+
     </div>
+</div>
+
+<section id="formElement" class="utopia-widget utopia-form-box section">
+    <div class="utopia-widget-title">
+        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
+        <span class="muted">search elements</span>
+
+        <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
+        <span class="textPrimary" style="float:right;">Total Records: </span>
+    </div>
+
     <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
+        <div class="utopia-widget-content">
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId1"> বিভাগ:</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Divisions", new { @class = "span12 ddl" })
 
-            <div class="row-fluid">
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">বিভাগ: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Division", new { @class = "ddl" })
-                </div>
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">জেলা: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "ddl" })
-                </div>
-            </div>
-            <div class="row-fluid">
-                <div class="span4"></div>
-                <div class="span4"></div>
-                <div class="span2"></div>
-                <div class="span2">
-                    <a id="exp" href="#" class="btn pull-right">Export</a>
-                    <a id="prn" href="#" class="btn pull-right">Print</a>
-                </div>
-            </div>
+                        </div>
+                    </div>
+                </fieldset>
 
-            <table id="gridTable" class="table table-striped table-bordered fixed_headers">
-                <thead>
-                    <tr>
-                        <th colspan="9">Covid-19 তথ্য</th>
-                        <th colspan="4">মোট বরাদ্ধ (মেঃ টন / টাকা)</th>
-                        <th>মানবিক সহায়তা প্রদান</th>
-                        <th colspan="4">মোট বিতরণ (মেঃ টন / টাকা)</th>
-                    </tr>
-                    <tr>
-                        <th>
-                            বিভাগ
-                        </th>
-                        <th>
-                            জেলা
-                        </th>
-                        <th>
-                            হাসপাতালের সংখ্যা
-                        </th>
-                        <th>
-                            আইসোলেশন বেড সংখ্যা
-                        </th>
-                        <th>
-                            এখন কোয়ারেন্টাইনে আছেন
-                        </th>
-                        <th>
-                            মোট কোয়ারেন্টাইন
-                        </th>
-                        <th>
-                            মোট রিলিজড
-                        </th>
-                        <th>
-                            মোট মৃত্যু
-                        </th>
-                        <th>
-                            মোট Covid-19 টেস্ট করা হয়েছে
-                        </th>
-                        <th>
-                            চাল
-                        </th>
-                        <th>
-                            ডাল
-                        </th>
-                        <th>
-                            আলু
-                        </th>
-                        <th>
-                            টাকা
-                        </th>
-                        @*<th>
-            DC, CS, UNO এর নেয়া উদ্যোগ
-        </th>*@
-                        <th>
-                            পরিবার
-                        </th>
-                        @*<th>
-            ব্যক্তি
-        </th>*@
-                        <th>
-                            চাল
-                        </th>
-                        <th>
-                            ডাল
-                        </th>
-                        <th>
-                            আলু
-                        </th>
-                        <th>
-                            টাকা
-                        </th>
-                        @*<th>পেঁয়াজ</th>
-        <th>লবন </th>
-        <th>তেল </th>
-        <th>সাবান </th>*@
-                    </tr>
-                </thead>
-            </table>
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId2">জেলা :</label>
+                        @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "span12 ddl" })
+
+                    </div>
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> সার্চ </a>
+                        </div>
+                    </div>
+
+                </fieldset>
+
+            </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
+                            <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
+
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
         </div>
     </div>
 </section>
+
+<table id="gridTable" class="table table-striped table-bordered fixed_headers">
+    <thead>
+        <tr>
+            <th colspan="9">Covid-19 তথ্য</th>
+            <th colspan="2">মানবিক সহায়তা বরাদ্দ</th>
+            <th colspan="4">মানবিক সহায়তা বিতরণ</th>
+        </tr>
+        <tr>
+            <th>
+                বিভাগ
+            </th>
+            <th>
+                জেলা
+            </th>
+            <th>
+                হাসপাতালের সংখ্যা
+            </th>
+            <th>
+                আইসোলেশন বেড সংখ্যা
+            </th>
+            <th>
+                এখন কোয়ারেন্টাইনে আছেন
+            </th>
+            <th>
+                মোট কোয়ারেন্টাইন
+            </th>
+            <th>
+                মোট রিলিজড
+            </th>
+            <th>
+                মোট মৃত্যু
+            </th>
+            <th>
+                মোট Covid-19 টেস্ট করা হয়েছে
+            </th>
+            <th> চাল (মেঃটন) </th>
+            <th> টাকা </th>
+            <th> চাল (মেঃটন) </th>
+            <th> চাল বিতরণ পরিবার </th>
+            <th> টাকা </th>
+            <th> টাকা বিতরণ পরিবার </th>
+
+        </tr>
+    </thead>
+</table>
+
 @section scripts{
     <script type="text/javascript">
     $(document).ready(function () {
