--- a/App.Web/Views/Role/Index.cshtml
+++ b/App.Web/Views/Role/Index.cshtml
@@ -10,46 +10,62 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" src="~/Content/img/icons2/key.png">
-        <span>Roles & Rights Management</span>
+
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> Roles & Rights Management</h2>
+            </li>
+        </ul>
+
     </div>
-    <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
-            <div class="row-fluid">
-                <div>
-                    @Ajax.ActionLink("New Role", "Create", "Role", ajaxOpt, new { @class = "btn btn-success pull-right" })
-                </div>
-                <table id="gridTable" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Role
-                            </th>
-                            <th>Default Page
-                            </th>
-                            <th>Status
-                            </th>
-                            <th style="width: 10%"></th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-        </div>
-        </div>
-</section>
+</div>
+<div class="row-fluid">
+    <div>
+        @Ajax.ActionLink("Add New Role", "Create", "Role", ajaxOpt, new { @class = "btn btn-primary pull-right" })
+    </div>
+    <div class="pull-right" style="margin-right:10px;">
+        <a href="#" onclick="ReSearch()" class="btn pull-right"><i class="icon icon-search"></i></a>
+        @Html.TextBox("txtSearch", null, new { @class = "pull-right", @placeholder = "search text" })
+        <script type="text/javascript">
+            function ReSearch() {
+                $('#gridTable').dataTable().fnDraw();
+            }
+        </script>
+    </div>
+</div>
+
+<table id="gridTable" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>
+                Role
+            </th>
+            <th>
+                Default Page
+            </th>
+            <th>
+                Status
+            </th>
+            <th style="width: 10%"></th>
+        </tr>
+    </thead>
+</table>
+
 @section scripts{
     <script type="text/javascript">
         $(document).ready(function () {
 
             var btns = {
-                3: false //column number : is button group            
+                3: false //column number : is button group
             };
 
             /*data grid initializer*/
             DataTableBinder($("#gridTable")   //table object
                 , '@Url.Content("~/Role/DataGrid")'  //json data url
-            , [10, 15]  //record size
+            , [50, 100]  //record size
             , false //show all with row size
             , null  //additional parameters at query string
             , btns   //buttons are at these columns
