--- a/App.Web/Views/Shared/_LayoutGeneral.cshtml
+++ b/App.Web/Views/Shared/_LayoutGeneral.cshtml
@@ -17,7 +17,7 @@
         UpdateTargetId = "MainBody",
         LoadingElementId = "loading",
         OnFailure = "failure"
-    };   
+    };
 }
 
 <body>
@@ -26,12 +26,8 @@
             <div class="span12">
                 <div class="header-top">
                     <div class="header-wrapper">
-                        <div class="span2">
-                            <a href="#" class="utopia-logo">
-                                <img style="padding-top: 10px;" src="~/Content/logo/1.png" /></a>
-                        </div>
-                        <div class="span6">
-                            <h3 style="text-align: center; line-height: 47px;">BRAC Assets Management System</h3>
+                        <div class="span8">
+                            <h3 style="line-height: 47px;">COVID-19 Response</h3>
                         </div>
 
                         <div class="header-right">
@@ -41,10 +37,20 @@
                                     <img src="~/Content/img/icons/id.png" alt="">
                                     <a href="#">@SessionHelper.UserName</a>
                                 </div>
-
                                 <div class="user-dropbox">
                                     <ul>
-                                        <li class="theme-changer white-theme">@Ajax.ActionLink("Support", "Support", "Main", ajaxOpt)</li>
+                                        @{ try
+                                            {
+
+                                                if (SessionHelper.IsGuest)
+                                                {
+                                                    <li>
+                                                        <a data-ajax-method="GET" data-ajax-mode="replace" data-ajax-loading="#loading" data-ajax-failure="failure" data-ajax="true" href="~/UserProfile/ChangePassword" data-ajax-update="#dialog1Body" data-ajax-success="openDialog1('Change Password')">Change Password</a>
+                                                    </li>
+                                                }
+                                            }
+                                            catch { }
+                                        }
                                         <li class="logout">
                                             <a href="@SsoUtility.SsoLogout?site=@SsoUtility.Site" style="color: #f00">Sign Out</a>
                                         </li>
@@ -57,48 +63,7 @@
                 </div>
             </div>
         </div>
-
         <div class="row-fluid">
-            @{var dt = DateTime.Now;}
-
-            <div class="sidebar-container span2">
-                <div class="sidebar">
-                    <div class="navbar sidebar-toggle">
-                        <div class="container">
-                            <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="nav-collapse leftmenu collapse" style="height: 0px;">
-                        <h2 class="muted">&nbsp;@String.Format("{0:MMM dd, yyyy}", dt)</h2>
-                        <span class="muted" style="color: #d17f44">&nbsp;@String.Format("{0:dddd}", dt)</span>
-                        <div class="accordion" id="accordion2" style="padding-top: 15px;">                            
-                            <div class="accordion-group">
-
-                                <div class="accordion-heading handle_accordion_event" id="_collapseOne">
-                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                                        href="#collapseOne">
-                                        <img title="Administrator" src="~/Content/img/icons/monitor.png">&nbsp;<span class="releasetext"><strong>Reports</strong> </span></a>
-                                </div>
-                                <div runat="server" id="collapseOne" class="accordion-body collapse" style="height: 0px;">
-                                    <div class="accordion-inner" runat="server" id="SingleAssetQuery">
-                                        @Html.ActionLink("Asset Query", "SingleAsset", "GeneralUserReports")
-                                    </div>
-                                    <div class="accordion-inner" runat="server" id="RptGeneralInventory">
-                                        @Html.ActionLink("Inventory", "Inventory", "GeneralUserReports")
-                                    </div>
-                                    <div class="accordion-inner" runat="server" id="GatePass">
-                                       @Html.ActionLink("Gate Pass", "Index", "GatePassEntry")
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div id="MainBody" class="body-container span10">
                 @RenderBody()
             </div>
