--- a/App.Web/Views/Standing/Index.cshtml
+++ b/App.Web/Views/Standing/Index.cshtml
@@ -10,37 +10,41 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" src="~/Content/img/icons2/key.png">
-        <span>@ViewBag.Title</span>
+
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> List of @ViewBag.Title</h2>
+            </li>
+        </ul>
+
     </div>
-    <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
-            <div class="row-fluid">
-                <div>
-                    @Ajax.ActionLink("Add", "Create", "Standing", ajaxOpt, new { @class = "btn btn-success pull-right" })
-                </div>
-                <table id="gridTable" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>
-                                @ViewBag.Title
-                            </th>
-                            @*<th>
-                                Details
-                            </th>*@
-                            <th>
-                                Status
-                            </th>
-                            <th style="width: 10%"></th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-        </div>
+</div>
+<div class="row-fluid">
+    <div>
+        @Ajax.ActionLink("Add New", "Create", "Standing", ajaxOpt, new { @class = "btn btn-primary pull-right" })
     </div>
-</section>
+</div>
+
+<table id="gridTable" class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>
+                @ViewBag.Title
+            </th>
+            @*<th>
+                    Details
+                </th>*@
+            <th>
+                Status
+            </th>
+            <th style="width: 10%"></th>
+        </tr>
+    </thead>
+</table>
+
 @section scripts{
     <script type="text/javascript">
         $(document).ready(function () {
@@ -52,7 +56,7 @@
             /*data grid initializer*/
             DataTableBinder($("#gridTable")   //table object
                 , '@Url.Content("~/Standing/DataGrid")'  //json data url
-            , [10, 15]  //record size
+            , [50, 100]  //record size
             , false //show all with row size
             , null  //additional parameters at query string
             , btns   //buttons are at these columns
