--- a/App.Web/Views/SummerySubmission/Index.cshtml
+++ b/App.Web/Views/SummerySubmission/Index.cshtml
@@ -13,90 +13,158 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" style="margin: 15px 0 0 15px;" src="~/Content/img/icons2/connect.png">
-        <span>মোট পরিদর্শন</span>
+
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> মোট পরিদর্শন</h2>                
+            </li>
+        </ul>
+
     </div>
+</div>
+
+<section id="formElement" class="utopia-widget utopia-form-box section">
+    <div class="utopia-widget-title">
+        <img src="~/Content/img/icons2/zoom_in.png" class="utopia-widget-icon">
+        <span class="muted">search elements</span>
+
+        <span class="textPrimary" id="iTotalRecords" style="float:right; padding-right:10px;">0</span>
+        <span class="textPrimary" style="float:right;">Total Records: </span>
+    </div>
+
     <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
+        <div class="utopia-widget-content">
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId1"> তথ্যের উৎস:</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Sources", new { @class = "span12 ddl" })
 
-            <div class="row-fluid pull-right">
-                <div class="pull-right">
-                    <a href="#">Total Records: <span id="iTotalRecords"></span></a>
-                    @if (UserRole.Check("SUMMERY", SessionHelper.Role))
-                    {
-                        @Ajax.ActionLink("নতুন তথ্য প্রদান", "CreateMulti", "SummerySubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-success" })
-                    }
-                </div>
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="FromDate">সার্চের শুরুর তারিখ:</label>
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
             </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId2">জেলা :</label>
+                        @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "span12 ddl" })
 
-            <div class="row-fluid">
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">তথ্যের উৎস: </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Sources", new { @class = "ddl" })
-                </div>
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">জেলা : </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId2, Model.ContentTypes2, "All Districts", new { @class = "ddl" })
-                </div>
-                <div class="span3">
-                    <h3 class="pull-left muted font-head">উপজেলা : </h3>
-                    @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "ddl" })
-                </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ToDate">সার্চের শেষ তারিখ:</label>
+
+                        <div class="controls">
+                            @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
             </div>
-            <div class="row-fluid">
-                <div class="span4">
-                    <h3 class="pull-left muted font-head">অনুসন্ধানের শুরুর তারিখ: </h3>
-                    &nbsp;&nbsp;&nbsp;&nbsp; @Html.TextBoxFor(model => model.FromDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
-                </div>
-                <div class="span4">
-                    <h3 class="pull-left muted font-head">শেষ তারিখ  </h3>
-                    &nbsp;&nbsp;&nbsp;&nbsp; @Html.TextBoxFor(model => model.ToDate, "{0:dd MMM, yyyy}", new { @class = "input-small", @placeholder = "Date" })
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="ContentTypeId3"> উপজেলা :</label>
+                        <div class="controls">
+                            @Html.DropDownListFor(model => model.ContentTypeId3, Model.ContentTypes3, "All Upazillas", new { @class = "span12 ddl" })
 
-                </div>
-                <div class="span2">
-                    <input type="hidden" id="isSum" name="isSum" value="false" />
-                    <a id="dateSearchButton" class="btn">সার্চ <i class="icon icon-search"></i></a>
-                    @*<a id="dateSearchButtonSum" class="btn">মোট তথ্য <i class="icon icon-search"></i></a>*@
-                </div>
-                <div class="span2">
-                    <a id="exp" href="#" class="btn pull-right">Export</a>
-                    <a id="prn" href="#" class="btn pull-right">Print</a>
-                </div>
+                        </div>
+                    </div>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group ">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="dateSearchButton" class="btn btn-info"><i class="icon icon-search icon-white"></i> সার্চ </a>
+
+                        </div>
+                    </div>
+
+                </fieldset>
+
             </div>
+            <div class="span3 utopia-form-freeSpace">
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            &nbsp;
+                            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+                            {
+                                @Ajax.ActionLink("নতুন তথ্য প্রদান", "CreateMulti", "SummerySubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-primary pull-right" })
+                            }
+                        </div>
+                    </div>
 
-            <table id="gridTable" class="table table-striped table-bordered fixed_headers">
-                <thead>
-                    <tr>
-                        <th>
-                            তথ্যের উৎস
-                        </th>
-                        <th>
-                            জেলা
-                        </th>
-                        <th>
-                            উপজেলা
-                        </th>
-                        <th>
-                            তারিখ
-                        </th>
-                        <th>
-                            কতজনের সাক্ষাত নেয়া হয়েছে
-                        </th>
-                        <th>
-                            নিবন্ধনকারী
-                        </th>
-                        @if (UserRole.Check("SUMMERY", SessionHelper.Role))
-                        {
-                            <th></th>
-                        }
-                    </tr>
-                </thead>
-            </table>
+                </fieldset>
+                <fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="select01">
+                            &nbsp;
+                        </label>
+                        <div class="controls">
+                            <a id="prn" href="#" class="btn pull-right"><i class="icon icon-print"></i> Print</a>
+                            <a id="exp" href="#" class="btn pull-right"><i class="icon icon-download"></i> Export</a>
+                           
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
         </div>
     </div>
 </section>
+
+<table id="gridTable" class="table table-striped table-bordered fixed_headers">
+    <thead>
+        <tr>
+            <th>
+                তথ্যের উৎস
+            </th>
+            <th>
+                জেলা
+            </th>
+            <th>
+                উপজেলা
+            </th>
+            <th>
+                তারিখ
+            </th>
+            <th>
+                কতজনের সাক্ষাত নেয়া হয়েছে
+            </th>
+            <th>
+                নিবন্ধনকারী
+            </th>
+            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+            {
+                <th></th>
+            }
+        </tr>
+    </thead>
+</table>
+
 @section scripts{
     <script type="text/javascript">
 
