--- a/App.Web/Views/UserProfile/Index.cshtml
+++ b/App.Web/Views/UserProfile/Index.cshtml
@@ -13,49 +13,57 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" style="margin: 15px 0 0 15px;" src="~/Content/img/icons2/id.png">
-        <span>User Management</span>
-    </div>
-    <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
-            <div class="row-fluid">               
-                <div>
-                    @Ajax.ActionLink("Create User", "Create", "UserProfile", ajaxOpt, new { @class = "btn btn-success pull-right" })
-                </div>
-                 <div class="pull-right" style="margin-right:10px;">
-                    <a href="#" onclick="ReSearch()" class="btn pull-right"><i class="icon icon-search"></i></a>
-                    @Html.TextBox("txtSearch", null, new { @class = "pull-right", @placeholder = "search text" })
-                    <script type="text/javascript">
-                        function ReSearch() {
-                            $('#myTable').dataTable().fnDraw();
-                        }
-                    </script>
-                </div>
-            </div>
-            <table id="myTable" class="table table-striped table-bordered row-fluid fixed_headers">
-                <thead>
 
-                    <tr>
-                        <th>PIN
-                        </th>
-                        <th>Name
-                        </th>
-                        <th>Email
-                        </th>
-                        <th>Role
-                        </th>
-                        <th>Status
-                        </th>
-                        <th style="width: 100px;"></th>
-                    </tr>
+<div class="row-fluid">
+    <div class="span12">
+        <ul class="breadcrumb">
+            <li>
+                <h2 class="textPrimary"><img src="~/Content/img/icons2/burn_blu-ray2.png" class="utopia-icons2-small-img" style="padding-right:5px;"> User Management</h2>
+            </li>
+        </ul>
 
-                </thead>
-            </table>
-        </div>
     </div>
-</section>
+</div>
+<div class="row-fluid">
+    <div>
+        @Ajax.ActionLink("Add New User", "Create", "UserProfile", ajaxOpt, new { @class = "btn btn-primary pull-right" })
+    </div>
+    <div class="pull-right" style="margin-right:10px;">
+        <a href="#" onclick="ReSearch()" class="btn pull-right"><i class="icon icon-search"></i></a>
+        @Html.TextBox("txtSearch", null, new { @class = "pull-right", @placeholder = "search text" })
+        <script type="text/javascript">
+            function ReSearch() {
+                $('#myTable').dataTable().fnDraw();
+            }
+        </script>
+    </div>
+</div>
+
+<table id="myTable" class="table table-striped table-bordered row-fluid fixed_headers">
+    <thead>
+
+        <tr>
+            <th>
+                PIN
+            </th>
+            <th>
+                Name
+            </th>
+            <th>
+                Email
+            </th>
+            <th>
+                Role
+            </th>
+            <th>
+                Status
+            </th>
+            <th style="width: 100px;"></th>
+        </tr>
+
+    </thead>
+</table>
+
 
 @section scripts{
     <script type="text/javascript">
@@ -66,7 +74,7 @@
             }
 
             var btns = {
-                5: true //column number : is button group            
+                5: true //column number : is button group
             };
 
             /*data grid initializer*/
