--- a/App.Web/Views/Main/Message.cshtml
+++ b/App.Web/Views/Main/Message.cshtml
@@ -8,25 +8,23 @@
     <div class="span12">
         <ul class="breadcrumb">
             <li>
-                <h2 class="textPrimary">                    
-                    BRAC COVID-19 Activities
+                <h2 class="textPrimary">
+                    BRAC COVID-19 Messages
                 </h2>
             </li>
         </ul>
 
     </div>
 </div>
-<section id="formElement" class="utopia-widget utopia-form-box section">    
+<section id="formElement" class="utopia-widget utopia-form-box section">
     <div class="row-fluid">
-        <div class="tab-pane">
-            <ul class="message-list">
-
+        <div id="message" class="tab-pane active">
+            <ul id="topMenuMsg" class="message-list">
                 @foreach (var v in Model)
                 {
                     @MvcHtmlString.Create(v.Name)
                 }
-
-            </ul>
+            </ul>            
         </div>
     </div>
 </section>
