--- a/App.Web/Views/Main/Dashboard.cshtml
+++ b/App.Web/Views/Main/Dashboard.cshtml
@@ -1,122 +1,256 @@
-﻿
+﻿@{
+    ViewBag.Title = "COVID Response";
+    Layout = "~/Views/Shared/_LayoutGeneral.cshtml";
+}
 
-<div>
-    @{
-        ViewBag.Title = "COVID Response";
-        Layout = "~/Views/Shared/_LayoutMain.cshtml";
-    }
+<div class="row-fluid">
 
-    <div class="row-fluid" style="padding-top:70px;">
-        <h3 style="color:#ff6a00">সংক্ষিপ্ত তথ্য</h3>
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>মোট সাক্ষাত নেয়া হয়েছে</th>
-                <td id="td2" style="font-size:14px;"></td>
-            </tr>
-            <tr>
-                <th>সম্ভাব্য রোগীর সংখ্যা</th>
-                <td id="td1" style="font-size:14px;"></td>
-            </tr>
-            <tr>
-                <th>সম্ভাব্য নারী রোগীর সংখ্যা</th>
-                <td id="td8" style="font-size:14px;"></td>
+    <!--Chart Icons -->
+    <div class="span3">
+        <div class="utopia-chart-legend">
+            <div class="utopia-chart-icon">
+                <img src="~/content/img/icons2/access_point.png">
+            </div>
+            <div class="utopia-chart-heading" id="td2"></div>
+            <div class="utopia-chart-desc">মোট সাক্ষাত নেয়া হয়েছে</div>
+        </div>
+    </div>
 
-            </tr>
-            <tr>
-                <th>জ্বর ও শ্বাস কষ্ট  সমস্যা জনিত সম্ভাব্য রোগী </th>
-                <td id="td9" style="font-size:14px;"></td>
+    <div class="span3">
+        <div class="utopia-chart-legend">
+            <div class="utopia-chart-icon">
+                <img src="~/content/img/icons2/emoticon_sleeping.png">
+            </div>
+            <div class="utopia-chart-heading" id="td1"></div>
+            <div class="utopia-chart-desc">সম্ভাব্য রোগীর সংখ্যা</div>
+        </div>
+    </div>
 
-            </tr>
-            <tr>
-                <th>সম্ভাব্য আক্রান্ত শীর্ষ ৫ জেলা </th>
-                <td id="td10" style="font-size:14px;"></td>
+    <div class="span3">
+        <div class="utopia-chart-legend">
+            <div class="utopia-chart-icon">
+                <img src="~/content/img/icons2/user_woman.png">
+            </div>
+            <div class="utopia-chart-heading" id="td8"></div>
+            <div class="utopia-chart-desc">সম্ভাব্য নারী রোগীর সংখ্যা</div>
+        </div>
+    </div>
 
-            </tr>
-            <tr>
-                <th>BRAC Coronarodh App থেকে প্রাপ্ত সম্ভাব্য রোগীর সংখ্যা</th>
-                <td id="td11" style="font-size:14px;"></td>
+    <div class="span3">
+        <div class="utopia-chart-legend">
+            <div class="utopia-chart-icon">
+                <img src="~/content/img/icons2/game_control.png">
+            </div>
+            <div class="utopia-chart-heading" id="td11"></div>
+            <div class="utopia-chart-desc">করোনারোধ App থেকে প্রাপ্ত </div>
+        </div>
+    </div>
 
-            </tr>
-        </table>
-        <h3 style="color:#6842fd">ব্র্যাক হেলথ থেকে প্রাপ্ত তথ্য</h3>
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>সরকারী সমন্বয় মিটিং </th>
-                <td id="tdh1" style="font-size:14px;"></td>
-                <th>ব্র্যাক সমন্বয় মিটিং </th>
-                <td id="tdh2" style="font-size:14px;"></td>
+    <!--Chart Icons End -->
+</div>
 
-            </tr>
-            <tr>
-                <th>স্টিকার বিতরণ</th>
-                <td id="tdh3" style="font-size:14px;"></td>
-                <th>লিফলেট বিতরণ</th>
-                <td id="tdh4" style="font-size:14px;"></td>
-            </tr>
-        </table>
-        <h3 style="color:#37940a">দেশের সার্বিক অবস্থা ও সামাজিক নিরাপত্তা তথ্য</h3>
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>হাসপাতালের সংখ্যা</th>
-                <td id="tdd1" style="font-size:14px;"></td>
-                <th>বর্তমান হোম কোয়ারান্টিন</th>
-                <td id="tdd2" style="font-size:14px;"></td>
-                <th>হোম কোয়ারান্টিন শেষ হয়েছে</th>
-                <td id="tdd3" style="font-size:14px;"></td>
-            </tr>
-            <tr>
-                <th>আইসোলেশন বেড সংখ্যা</th>
-                <td id="tdd4" style="font-size:14px;"></td>
-                <th>মোট মৃত্যু</th>
-                <td id="tdd5" style="font-size:14px;"></td>
-                <th>Covid-19 টেস্ট করা হয়েছে</th>
-                <td id="tdd6" style="font-size:14px;"></td>
-            </tr>
-        </table>
 
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>রিলিফ প্রদান</th>
-                <th colspan="4">মোট বিতরণ (মেঃ টন)</th>
-            </tr>
-            <tr>
-            <tr>
-                <td> পরিবার </td>
-                @*<td> ব্যক্তি </td>*@
-                <td> চাল </td>
-                <td> ডাল </td>
-                <td> আলু </td>
-                <td> টাকা </td>
-                @*<td>তেল </td>
-                    <td>সাবান </td>
-                    <td>পেঁয়াজ</td>
-                    <td>লবন </td>*@
-            </tr>
-            <tr>
-                <td id="tdr5" style="font-size:14px;">0</td>
-                @*<td id="tdr6" style="font-size:14px;">0</td>*@
-                <td id="tdr7" style="font-size:14px;">0</td>
-                <td id="tdr8" style="font-size:14px;">0</td>
-                <td id="tdr9" style="font-size:14px;">0</td>
-                <td id="tdr10" style="font-size:14px;">0</td>
-                @*<td id="tdr1" style="font-size:14px;">0</td>
-                    <td id="tdr2" style="font-size:14px;">0</td>
-                    <td id="tdr3" style="font-size:14px;">0</td>
-                    <td id="tdr4" style="font-size:14px;">0</td>*@
-            </tr>
-        </table>
+<div class="row-fluid">
+
+    <div class="span12">
+
+        <div class="row-fluid">
+
+            <div class="span6">
+
+                <div class="row-fluid">
+
+                    <div class="span12">
+
+                        <section class="utopia-widget">
+                            <div class="utopia-widget-title">
+                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
+                                <span>সরকারি হিসেবে দেশের সার্বিক অবস্থা</span>
+                            </div>
+
+                            <div class="utopia-widget-content">
+
+                                <table class="table table-bordered">
+
+                                    <colgroup>
+                                        <col class="utopia-col-0">
+                                        <col class="utopia-col-1">
+                                        <col class="utopia-col-0">
+                                        <col class="utopia-col-1">
+                                        <col class="utopia-col-0">
+                                    </colgroup>
+
+                                    <tbody>
+                                        <tr>
+                                            <td>হাসপাতালের সংখ্যা</td>
+                                            <td id="tdd1"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>আইসোলেশন বেড সংখ্যা</td>
+                                            <td id="tdd4"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>বর্তমান হোম কোয়ারান্টিন</td>
+                                            <td id="tdd2"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>হোম কোয়ারান্টিন শেষ হয়েছে</td>
+                                            <td id="tdd3"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Covid-19 টেস্ট করা হয়েছে</td>
+                                            <td id="tdd6"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>মোট মৃত্যু</td>
+                                            <td id="tdd5"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </section>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+
+                    <div class="span12">
+
+                        <section class="utopia-widget">
+                            <div class="utopia-widget-title">
+                                <img src="~/Content/img/icons/paragraph_justify.png" class="utopia-widget-icon">
+                                <span>সরকারের সামাজিক নিরাপত্তা তথ্য</span>
+                            </div>
+
+                            <div class="utopia-widget-content">
+
+                                <table class="table table-bordered">
+
+                                    <colgroup>
+                                        <col class="utopia-col-0">
+                                        <col class="utopia-col-1">
+                                        <col class="utopia-col-0">
+                                        <col class="utopia-col-1">
+                                        <col class="utopia-col-0">
+                                    </colgroup>
+
+                                    <tbody>
+                                        <tr>
+                                            <td>মোট বরাদ্দ চালের পরিমাণ (মেঃটন)</td>
+                                            <td id="plR"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>মোট বরাদ্দ নগদ অর্থের পরিমাণ (টাকা)</td>
+                                            <td id="plM"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>মোট চাল বিতরণ (মেঃটন)</td>
+                                            <td id="tdr7"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>চাল প্রাপ্ত পরিবার</td>
+                                            <td id="tdr5"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>মোট নগদ অর্থ বিতরণ (টাকা)</td>
+                                            <td id="tdr10"></td>
+                                        </tr>
+                                        <tr>
+                                            <td>নগদ অর্থ প্রাপ্ত পরিবার </td>
+                                            <td id="tdr6"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </section>
+                    </div>
+                </div>
+
+            </div><!-- Mid panel -->
+
+            <div class="span6">
+
+                <div class="row-fluid">
+
+                    <div class="span12">
+                        <div class="well utopia-form-tooltip">
+                            <h2>সম্ভাব্য আক্রান্ত শীর্ষ ৫ জেলা</h2>
+                            <h3 id="td10"></h3>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="alert alert-success">
+                            ব্র্যাক সমন্বয় মিটিং করা হয়েছে মোট <strong><span id="tdh2"></span></strong> টি
+                        </div>
+                        <div class="alert alert-info">
+                            সরকারী সমন্বয় মিটিং করা হয়েছে মোট <strong><span id="tdh1"></span> </strong> টি
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="utopia-chart-legend">
+                            <div class="utopia-chart-icon">
+                                <img src="~/content/img/icons2/mail.png">
+                            </div>
+                            <div class="utopia-chart-heading" id="tdh3"></div>
+                            <div class="utopia-chart-desc">লিফলেট বিতরণ</div>
+                        </div>
+                    </div>
+
+                    <div class="span6">
+                        <div class="utopia-chart-legend">
+                            <div class="utopia-chart-icon">
+                                <img src="~/content/img/icons2/notepad.png">
+                            </div>
+                            <div class="utopia-chart-heading" id="tdh4"></div>
+                            <div class="utopia-chart-desc">স্টিকার বিতরণ</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="utopia-chart-legend">
+                            <div class="utopia-chart-sparkline" id="utopia-sparkline-type1"><canvas style="display: inline-block; width: 48px; height: 48px; vertical-align: top;" width="48" height="48"></canvas></div>
+                            <div class="utopia-chart-heading">চাল </div>
+                            <div class="utopia-chart-desc">মোট বরাদ্দ ও বিতরণ</div>
+                        </div>
+                    </div>
+                    <div class="span6">
+                        <div class="utopia-chart-legend">
+                            <div class="utopia-chart-sparkline" id="utopia-sparkline-type2"><canvas style="display: inline-block; width: 48px; height: 48px; vertical-align: top;" width="48" height="48"></canvas></div>
+                            <div class="utopia-chart-heading">নগদ অর্থ</div>
+                            <div class="utopia-chart-desc">মোট বরাদ্দ ও বিতরণ</div>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- Right panel -->
+
+        </div>
 
     </div>
 
 </div>
+
+<!-- Body end -->
+
 @section scripts{
+    <script type="text/javascript" src="~/Scripts/js/jquery.sparkline.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             //DatePicker('utopia-dashboard-datepicker', 'dd MMM yyyy');
             //PrepareMap();
 
+
             var jsonTableData = $.ajax({
-                url: "Main/SummeryData",
+                url: "SummeryData",
                 dataType: "json",
                 async: false
             }).responseText;
@@ -142,17 +276,25 @@
             //$('#tdr3').html(jd.district.onion);
             //$('#tdr4').html(jd.district.salt);
 
-            $('#tdr5').html(jd.district.family);
-            //$('#tdr6').html(jd.district.person);
+            $('#plR').html(jd.district.planRice);
+            $('#plM').html(jd.district.planMoney);
+
             $('#tdr7').html(jd.district.rice);
-            $('#tdr8').html(jd.district.dal);
-            $('#tdr9').html(jd.district.potato);
+            $('#tdr5').html(jd.district.family);
             $('#tdr10').html(jd.district.money);
+            $('#tdr6').html(jd.district.person);
+
+            //$('#tdr8').html(jd.district.dal);
+            //$('#tdr9').html(jd.district.potato);
+
 
             $('#tdh1').html(jd.hnpp.govtMeet);
             $('#tdh2').html(jd.hnpp.bracMeet);
             $('#tdh3').html(jd.hnpp.stic);
             $('#tdh4').html(jd.hnpp.leaf);
+
+            $("#utopia-sparkline-type1").sparkline([jd.district.planRice, jd.district.rice], { type: "pie", height: 48 });
+            $("#utopia-sparkline-type2").sparkline([jd.district.planMoney, jd.district.money], { type: "pie", height: 48 });
 
         });
 
