--- a/App.Web/Views/Shared/_Layout.cshtml
+++ b/App.Web/Views/Shared/_Layout.cshtml
@@ -6,49 +6,62 @@
     <meta charset="utf-8" />
     <title>COVID-19 Response</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="~/Content/img/homeImages/home.css" media="screen, print">
-    <script src="~/Content/img/homeImages/ga.js" async="" type="text/javascript"></script>
 
     @Styles.Render("~/Content/styles")
     @Scripts.Render("~/bundles/jquery")
 </head>
-<body>
-    <div class="container" style="padding-top: 10px;">
-        <div class="row" style="margin-top:50px;">
-            <div class="span4">&nbsp;</div>
-            <div class="span4">
-                <a class="logo-link" style="text-decoration: none;" href="#/">
-                    <h3 style="color: #474748;">COVID-19 Response</h3>
-                </a>
-            </div>
-            <div class="span4">&nbsp;</div>
-        </div>
-        <div class="row"  style="margin-top:50px;">
-            <div class="span4">&nbsp;</div>
-            <div class="span4">
-                <h2 class="muted">Special User Login</h2>
-                <div class="utopia-login">
-                    <form method="post" action="Login" class="utopia">
-                        <input type="hidden" name="site" id="site" value="@AppProj.Web.Helpers.SsoUtility.Site" />
-                        @Html.TextBoxFor(m => m.user, new { id = "UserName", @placeholder = "Pin", @class = "input-small" })
-                        @Html.PasswordFor(m => m.password, new { @id = "Password", @placeholder = "Password", @class = "input-small" })
-                        <button type="submit" class="btn" style="width: 100px; margin-top: -7px;">
-                            <img title="power" class="utopia-icons2-small-img" src="~/Content/img/icons2/power.png">
-                            Sign In
-                        </button>
-                        <span style="font-size: small; color: red; float: right">
-                            @RenderSection("featured", required: false)
-                        </span>
 
-                    </form>
+
+
+<body>
+
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="utopia-login-message">
+                    <h1>COVID-19 Response</h1>
+                    <p>Sign in to get access</p>
                 </div>
             </div>
-            <div class="span4">&nbsp;</div>
         </div>
-       
+
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div class="utopia-login-info">
+                            <img src="~/Content/img/login.png" alt="image">
+                        </div>
+                    </div>
+
+                    <div class="span6">
+                        <div class="utopia-login">
+                            <h1>User Access</h1>
+                            <form action="Login" method="post" class="utopia">
+                                <input type="hidden" name="site" id="site" value="@AppProj.Web.Helpers.SsoUtility.Site" />
+                                <label>Username:</label>
+                                @Html.TextBoxFor(m => m.user, new { id = "UserName", @placeholder = "user name", @class = "span12 utopia-fluid-input" })
+
+                                <label>Password:</label>
+                                @Html.PasswordFor(m => m.password, new { @id = "Password", @placeholder = "Password", @class = "span12 utopia-fluid-input " })
+
+                                <ul class="utopia-login-action">
+                                    <li>
+                                        <input type="submit" class="btn span4" value="Login">
+                                    </li>
+                                </ul>
+                            </form>
+                            @RenderSection("featured", required: false)
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         @RenderBody()
 
     </div>
+
     @Scripts.Render("~/bundles/utopia")
     @RenderSection("scripts", required: false)
 
@@ -56,7 +69,7 @@
 </html>
 <script type="text/javascript">
     $(document).ready(function () {
-        
+
     });
 
 </script>
