--- a/App.Web/Views/Shared/_LayoutPartial.cshtml
+++ b/App.Web/Views/Shared/_LayoutPartial.cshtml
@@ -1,66 +1,113 @@
-﻿@{
-    var ajaxOpt = new AjaxOptions
-    {
-        UpdateTargetId = "MainBody",
-        LoadingElementId = "loading",
-        OnFailure = "failure"
-    };   
-}
-<div id="loading" class="loading" style="display: none;">
-    <p style="padding-top: 35px;">
-        Loading...
-    </p>
-</div>
-<div id="dialog1" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="dialog1Label"
-    aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal" aria-hidden="true">×</a>
-        <h3 id="dialog1Label"></h3>
-    </div>
-    <div id="dialog1Body" class="modal-body">
+﻿@using AppProj.Web.Controllers;
+@using AppProj.Web;
+@using AppProj.Web.Helpers;
 
-    </div>
-</div>
-<div id="dialog2" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="dialog2Label"
-    aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal" aria-hidden="true">×</a>
-        <h3 id="dialog2Label"></h3>
-    </div>
-    <div id="dialog2Body" class="modal-body">
-    </div>
-</div>
-<div id="errorModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
-    aria-hidden="true">
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal" aria-hidden="true">×</a>
-        <h3 id="errorModalLabel">Error</h3>
-    </div>
-    <div class="modal-body">
-        <div class="alert alert-error">
-            Your <strong>session has exired</strong> or an error occured at server.
-        </div>
-        <div class="alert alert-block">
-            Step 1 : Click on @Html.ActionLink("Sign Out", "LogOff", "Home", null, new { @class = "btn btn-mini btn-warning" })
-            and do signin again
-            <br />
-            Step 2 : Try to do your job which has created error
-        </div>
-        <div class="alert alert-info">
-            If it does not work properly, please enter an @Ajax.ActionLink("incedence", "Support", "Main", ajaxOpt, new { @class = "btn btn-mini btn-info" })
-            We will solve it immediately
-        </div>
-    </div>
-</div>
-<div id="disconnectedModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="disconnectedModalLabel"
-    aria-hidden="true">
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal" aria-hidden="true">×</a>
-        <h3 id="disconnectedModalLabel">Error</h3>
-    </div>
-    <div class="modal-body">
-        <div class="alert alert-error">
-            Your network<strong> has disconnected</strong> or failed to communicate with server.
-        </div>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="header-top">
+            <div class="header-wrapper">
+                <a href="#" class="utopia-logo"><img src="~/Content/logo/brac_logo.png" alt="COVID-19 Response"></a>
+                <p style="margin-bottom:0px;" class="muted">COVID-19 Response</p>
+                <div class="header-right">
+                    <div class="header-divider">&nbsp;</div>
+                    <div class="notification header-divider">
+                        <div class="notification-wrapper">
+                            <a href="~/Main" class="notification-counter"> Tabular Data </a>
+                        </div>
+                    </div>
+
+                    <div class="notification header-divider">
+                        <div class="notification-wrapper">
+                            <a href="#" id="notCnt2" class="notification-counter"> Dashboards </a>
+                            <div id="triangle-down2"></div>
+                            <div id="notBox2" class="tabbable notification-box" style="display: none;">
+                                <ul class="message-list">
+                                    <li>
+                                        <div class="msg">
+                                            <img src="~/Content/img/icons2/info2.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/Main/Dashboard" style="padding-left:10px;">
+                                                Counts <small class="muted">(all counts of the collected data)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="msg">
+                                            <img src="~/Content/img/icons2/stats_pie.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/Analytics" style="padding-left:10px;">
+                                                Chart <small class="muted">(chart view)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="msg">
+                                            <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="#" style="padding-left:10px;">
+                                                Map <small class="muted">(64 district in map)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <div class="message-more"><a href="#"> </a></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="notification header-divider">
+                        <div class="notification-wrapper">
+                            <a href="#" id="notCnt" class="notification-counter" style="font-style:italic;"> info </a>
+                            <div id="triangle-down"></div>
+                            <div id="notBox" class="tabbable notification-box" style="display: none;">
+                                <ul class="nav nav-tabs">
+                                    <li class="active"><a data-toggle="tab" href="#message">Messages</a></li>
+                                    <li class=""><a data-toggle="tab" href="#activity">Activity</a></li>
+                                </ul>
+                                <div class="tab-content">
+                                    <div id="message" class="tab-pane active">
+                                        <ul id="topMenuMsg" class="message-list">
+
+                                        </ul>
+                                        <div class="message-more"><a href="@Url.Action("Message", "Main")"> more messages </a></div>
+                                    </div>
+                                    <div id="activity" class="tab-pane">
+                                        <ul id="topMenuAct" class="message-list"></ul>
+                                        <div class="message-more"><a href="#"> </a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- Notification end -->
+
+                    <div class="user-panel header-divider">
+                        <div class="user-info">
+                            <img src="img/icons/user.png" alt="">
+                            <a href="#">
+                            
+                                @SessionHelper.UserName
+                            
+                            </a>
+                        </div>
+                        <div class="user-dropbox" style="display: none;">
+                            <ul>
+                                <li class="user"><a href="#">Profile</a></li>
+                                @{ try
+                                    {
+
+                                        if (SessionHelper.IsGuest)
+                                        {
+                                            <li class="settings">
+                                                <a data-ajax-method="GET" data-ajax-mode="replace" data-ajax-loading="#loading" data-ajax-failure="failure" data-ajax="true" href="~/UserProfile/ChangePassword" data-ajax-update="#dialog1Body" data-ajax-success="openDialog1('Change Password')">Change Password</a>
+                                            </li>
+                                        }
+                                    }
+                                    catch { }
+                                }
+
+                                <li class="logout"><a href="@SsoUtility.SsoLogout?site=@SsoUtility.Site">Logout</a></li>
+                            </ul>
+                        </div>
+                    </div><!-- User panel end -->
+                </div><!-- End header right -->
+            </div><!-- End header wrapper -->
+        </div><!-- End header -->
     </div>
 </div>
