--- a/App.Web/Views/BepSubmission/Index.cshtml
+++ b/App.Web/Views/BepSubmission/Index.cshtml
@@ -111,7 +111,7 @@
                         </label>
                         <div class="controls">
                             &nbsp;
-                            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+                            @if (UserRole.Check("ALL_PROGRAM_DATA", SessionHelper.Role))
                             {
                                 @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "BepSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-primary pull-right" })
                             }
