--- a/App.Web/Views/HnppSubmission/Index.cshtml
+++ b/App.Web/Views/HnppSubmission/Index.cshtml
@@ -107,7 +107,7 @@
                         </label>
                         <div class="controls">
                             &nbsp;
-                            @if (UserRole.Check("SUMMERY", SessionHelper.Role))
+                            @if (UserRole.Check("HNPP", SessionHelper.Role))
                             {
                                 @Ajax.ActionLink("নতুন তথ্য প্রদান", "Create", "HnppSubmission", new { isOpeningAsset = false }, ajaxOpt, new { @class = "btn btn-primary pull-right" })
                             }
