--- a/App.Web/Views/Shared/_LayoutPartial.cshtml
+++ b/App.Web/Views/Shared/_LayoutPartial.cshtml
@@ -79,7 +79,7 @@
 
                     <div class="user-panel header-divider">
                         <div class="user-info">
-                            <img src="img/icons/user.png" alt="">
+                            <img src="~/Content/img/icons/user.png" alt="">
                             <a href="#">
                             
                                 @SessionHelper.UserName
