--- a/App.Web/Views/Shared/_LayoutPartial.cshtml
+++ b/App.Web/Views/Shared/_LayoutPartial.cshtml
@@ -40,12 +40,30 @@
                                     </li>
                                     <li>
                                         <div class="msg">
-                                            <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
-                                            <a href="#" style="padding-left:10px;">
-                                                Map <small class="muted">(64 district in map)</small>
+                                            <img src="~/Content/img/icons2/location.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/Main/GisMap" style="padding-left:10px;">
+                                                Patients Map <small class="muted">(64 districts and Dhaka in detail)</small>
                                             </a>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="msg">
+                                            <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/Main/WorldMap" style="padding-left:10px;">
+                                                World COVID-19 Status <small class="muted">(developed by Johns Hopkins University)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+
+                                    <li>
+                                        <div class="msg">
+                                            <img src="~/Content/img/icons2/world.png" class="utopia-icons2-medium-img" title="world" />
+                                            <a href="~/MapSummary" style="padding-left:10px;">
+                                                BD COVID-19 Status <small class="muted">(developed by Johns Hopkins University)</small>
+                                            </a>
+                                        </div>
+                                    </li>
+
                                 </ul>
                                 <div class="message-more"><a href="#"> </a></div>
                             </div>
