--- a/App.Web/Views/Main/Index.cshtml
+++ b/App.Web/Views/Main/Index.cshtml
@@ -16,6 +16,12 @@
 
     </div>
 </div>
+<p>
+    <img src="~/Content/img/icons2/earphones.png" class="utopia-icons2-medium-img" title="Call to Doctor" style="margin-right:10px;" />
+    Call to Doctor <span style="font-size:22px; font-weight:bold"> 0 1 8 3 3 3 0 1 4 1 1 </span> open for 24 x 7
+    <br />
+    <small>However, you are encouraged to call between 9 am to 8 pm unless there is any emergency</small>
+</p>
 <section id="formElement" class="utopia-widget utopia-form-box section">    
     <div class="row-fluid">
         <div class="tab-pane">
